<resources>
    <string name="app_name">zoeblueprint</string>
    <string name="zoe_thumbprint">zoeblueprint</string>
    <string name="days_to_graduation">Days to <b>Graduation</b></string>
    <string name="days_left_in_semester">Days left in <b>Semester</b></string>
    <string name="choose_profile_photo">Choose profile photo</string>
    <string name="choose_cover_photo">Choose cover photo</string>
    <string name="oh_hey_zoe_student">OH HEY,ZOE STUDENT!</string>
    <string name="choose_a_theme">CHOOSE A THEME</string>
    <string name="day_light">Day Light</string>
    <string name="dark_night">Dark Night</string>
    <string name="general">GENERAL</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="personal">PERSONAL</string>
    <string name="name">Name</string>
    <string-array name="school">
        <item>School</item>
        <item>School1</item>
        <item>School2</item>
        <item>School3</item>
    </string-array>
    <string name="target_gpa">Target GPA</string>
    <string name="current_gpa">Current GPA</string>
    <string name="student_number">Student Number</string>
    <string name="school_name">School Name</string>
    <string name="functions">FUNCTIONS</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="location_services">Location Services</string>
    <string name="image">IMAGE</string>
    <string name="friends">FRIENDS</string>
    <string name="cso_s">CSO\'S</string>
    <string name="confirm_logout">Confirm logout?</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="skip">SKIP</string>
    <string name="points">Points!</string>
    <string name="volunteer_for_an_event">Volunteer for an event</string>
    <string name="upload_files_to_your_locker">Upload files to your locker</string>
    <string name="my_targets">My targets</string>
    <string name="you_have_a_message">You have a message</string>
    <string name="find_cso_in_your_area">Find CSO in your area</string>
    <string name="confirm_exit">Confirm exit?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit.</string>
    <string name="delete_booking_for">Delete booking for</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="hangout">Hangout</string>
    <string name="locker">Locker</string>
    <string name="target">Target</string>
    <string name="booking">Booking</string>
    <string name="dashboard">Dashboard</string>
    <string name="i_m_a_student">I\'m a Student/Volunteer</string>
    <string name="i_m_a_cso">I\'m a CSO</string>
    <string name="login">LOGIN</string>
    <string name="new_to_zoe_thumbprint">New to zoeblueprint?</string>
    <string name="register_here">REGISTER HERE</string>
    <string name="zoe_thumbprint_caps">ZOE BLUEPRINT</string>
    <string name="logging_you_in">Logging you in…</string>
    <string name="push_notification">Push Notification</string>
    <string name="settings">Settings</string>
    <string name="registration">REGISTRATION</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="postal_code">Postal Code</string>
    <string name="city">City</string>
    <string name="phone">Phone Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">CLICK HERE</string>
    <string name="submit">Submit</string>
    <string name="we_just_need_your_registered_email_to_send_your_password_reset_function">We just need your registered Email to send your password reset function.</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="otp">Otp</string>
    <string name="change_phone">Change phone number</string>
    <string name="please_take_a_moment_to_verify_your_phone_number_this_help_us_confirm_your_identity_and_secure_your_account">Please take a moment to verify your phone number.\nThis helps us confirm your identity and secure your account.</string>
    <string name="otp_expires_in">OTP expires in</string>
    <string name="minutes">Minutes</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_validation_failed">OTP validation failed</string>
    <string name="something_went_wrong">No Data Found</string>
    <string name="OTP_verified_successfully_please_login_to_continue">OTP verified successfully please login to continue</string>
    <string name="student_name">Student Name</string>
    <string name="grad_date">Grad Date</string>
    <string name="hrs_required">Hrs required</string>
    <string name="rank">Shift Rank</string>
    <string name="date">Shift Date</string>
    <string name="time">Shift Time</string>
    <string name="change_status">Change Status</string>
    <string name="tab_students_followers">SEE FOLLOWERS</string>
    <string name="tab_volunteers">VOLUNTEERS</string>
    <string name="api_key" translatable="false">AIzaSyD6Oj7tENqNyFjEE0Zq-XIJepaGIxvFyCM</string>
    <string name="tab_myevent">MY EVENTS</string>
    <string name="tab_newevent">NEW EVENTS</string>
    <string name="upcoming_event">UPCOMING EVENTS</string>
    <string name="vol_request">Volunteer Request</string>
    <string name="next_event_countdown">Next Event Countdown</string>
    <string name="add_event_detail">ADD EVENT DETAILS</string>
    <string name="event_name">Event Name</string>
    <string name="event_descrip">Event Description</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_no">Phone No</string>
    <string name="location">Location</string>
    <string name="manage_schedule">Manage Schedule</string>
    <string name="volunteers">Volunteers</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="task">Task</string>
    <string name="events">Events</string>
    <string name="students">Students</string>
    <string name="message">Message</string>
    <string name="groups">GROUPS</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="MY_BOOKING">MY BOOKING</string>
    <string name="FIND_CSO">FIND CSO</string>
    <string name="TIMELINE">TIMELINE</string>
    <string name="CONNECT">CONNECT</string>
    <string name="DOCUMENTS">DOCUMENTS</string>
    <string name="MY_RATING">MY RATING</string>
    <string name="MY_TARGETS">MY TARGETS</string>
    <string name="COUNTDOWN">COUNTDOWN</string>
    <string name="org_name">Organisation Name</string>
    <string name="org_email">Organisation Email</string>
    <string name="org_phone">Organisation Phone</string>
    <string name="org_website">Organisation Website</string>
    <string name="org_mission">Organisation Mission</string>
    <string name="org_cause">Organisation Cause</string>
    <string name="org_profile">Organisation Profile</string>
    <string name="tax_id">EIN/Tax Id</string>
    <string name="org_info">Organisation Information</string>
    <string name="upload_doc">Upload Document</string>
    <string name="more_info">More Information</string>
    <string name="non_profit">Is your Organisation a not-for-profit Organisation?</string>
    <string name="services">What type of services and activities does your Organisation offer? </string>
    <string name="target_client">What is your target client group?</string>
    <string name="person">Please describe the person you require for the volunteer role(age,sex,characteristics etc.)?</string>
    <string name="time_period">What is the minimum time period you would like the volunteers for(e.g. 3months, 6months, 12months)</string>
    <string name="no_of_volunteer">How many volunteer in the total does your organisation have and how many do you need?</string>
    <string name="policy_check">Do your volunteer require a policy check? </string>
    <string name="public_transport">Is your Organisation (or the location where volunteers will work) easily accessible by Public Transport?</string>
    <string name="clear">Clear</string>
    <string name="next">Next</string>
    <string name="basic_information">Basic Information</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="seconds">Seconds</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="are_you_501c3_certified">Are you 501C3 certified?</string>
    <string name="upload_document_type">Upload Document Type</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="edit">Edit</string>
    <string name="add_shift">Add</string>
    <string name="view_shift">View</string>
    <string name="delete">Delete</string>
    <string name="please_enter_you_registered_email_id_to_receive_reset_password_link">Please enter your registered email id to receive reset password link.</string>
    <string name="upload_document_title">Upload Document Title</string>
    <string name="update_event_detail">UPDATE EVENT DETAILS</string>
    <string name="zip">Postal Code</string>
    <string name="add">Add</string>
    <string name="toast_event_added_success">Event Added Successfully</string>
    <string name="toast_event_added_failed">Event Not Added! Please try again.</string>
    <string name="please_wait">Please Wait...</string>
    <string name="enter_start_date">Enter Start Date</string>
    <string name="enter_end_date">Enter End Date</string>
    <string name="hint_end_date_past">End Date can not be a Past Date!</string>
    <string name="hint_end_date_before_start">End Date can not be before Start Date!</string>
    <string name="hint_select_start_date">Please select Start Date!</string>
    <string name="err_no_data_found">No Data Found</string>
    <string name="err_enter_valid_email">Enter Valid Email</string>
    <string name="err_enter_valid_phone">Enter Valid Phone Number</string>
    <string name="err_enter_valid_postal">Enter valid Postal Code</string>
    <string name="err_no_school">School Not Found</string>
    <string name="err_no_country_found">Country Not Found</string>
    <string name="err_no_profile_found">Profile Not Found</string>
    <string name="err_no_state_found">State Not Found</string>
    <string name="err_no_timezone_found">Timezone Not Found</string>
    <string name="err_no_event_type_found">Event Type Not Found</string>
    <string name="err_server">Server Error</string>
    <string name="wrong_email_or_password">Wrong Email or Password entered</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="validating_otp">Validating OTP...</string>
    <string name="select_image_from">Select image from</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="done">Done</string>
    <string name="file_name">File Name :</string>
    <string name="choose_image">CHOOSE IMAGE</string>
</resources>