<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="500dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/blue_light">

        <com.ztp.app.Helper.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image_from"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <com.ztp.app.Helper.MyTextView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_40sdp"
        android:text="@string/camera"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/background_3"/>

    <com.ztp.app.Helper.MyTextView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:minHeight="@dimen/_40sdp"
        android:gravity="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/background_3"/>

    <com.ztp.app.Helper.MyTextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"
        android:minHeight="@dimen/_40sdp"
        android:gravity="center"/>



</LinearLayout>