<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                app:srcCompat="@drawable/ic_back_arrow"
                android:layout_gravity="center_vertical"/>

        </FrameLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            app:srcCompat="@drawable/thumbprints"/>

        <com.ztp.app.Helper.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoe_thumbprint"
            android:textSize="@dimen/_15ssp"
            android:layout_marginTop="@dimen/_5sdp"/>

        <com.ztp.app.Helper.MyTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/verify_your_number"
            android:background="@color/blue_light"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center">

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp" />

        <com.ztp.app.Helper.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:text="@string/please_take_a_moment_to_verify_your_phone_number_this_help_us_confirm_your_identity_and_secure_your_account"
            android:textAlignment="center"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp" />

        <com.ztp.app.Helper.MyTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ztp.app.Helper.MyTextInputEditText
                android:id="@+id/etOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/otp"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_12ssp" />
        </com.ztp.app.Helper.MyTextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.ztp.app.Helper.MyButton
                android:id="@+id/change_phone"
                style="@style/MyGrayButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/change_phone"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="false"
                android:layout_weight=".5"
                android:layout_margin="@dimen/_5sdp"/>

            <com.ztp.app.Helper.MyButton
                android:id="@+id/submit"
                style="@style/MyButton"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/submit"
                android:textSize="@dimen/_10ssp"
                android:textAllCaps="false"
                android:layout_weight=".5"
                android:layout_margin="@dimen/_5sdp"
                />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/_10sdp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/countdownLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.ztp.app.Helper.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/otp_expires_in"
                    />

                <com.ztp.app.Helper.MyTextView
                    android:id="@+id/counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:textColor="@color/green"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    />

                <com.ztp.app.Helper.MyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/minutes"
                    />


            </LinearLayout>

            <com.ztp.app.Helper.MyTextView
                android:id="@+id/resendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/blue_light"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>

</LinearLayout>

