<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".View.Fragment.CSO.Event.UpdateImageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/blue_light">

        <com.ztp.app.Helper.MyTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/MediumTextView"
            android:textColor="@color/white"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:scaleType="fitXY"
        android:src="@drawable/no_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@color/blue_light">

        <com.ztp.app.Helper.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            style="@style/MediumTextView"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp">

        <com.ztp.app.Helper.MyTextView
            android:id="@+id/fileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RegularTextView"
            android:text="@string/file_name"
            android:textColor="@color/blue_light"
            android:visibility="invisible"/>

        <com.ztp.app.Helper.MyTextView
            android:id="@+id/file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RegularTextView" />

    </LinearLayout>


    <com.ztp.app.Helper.MyTextView
        android:id="@+id/camera"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/camera"
        style="@style/RegularTextView"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/black_border_rectangle"
        android:layout_marginTop="@dimen/_10sdp"/>

    <com.ztp.app.Helper.MyTextView
        android:id="@+id/gallery"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/gallery"
        style="@style/RegularTextView"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/black_border_rectangle"
        android:layout_marginTop="@dimen/_10sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            style="@style/MyGrayButton"
            android:layout_marginEnd="@dimen/_5sdp"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/upload"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            style="@style/MyGreenButton"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/done" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_10sdp" />

</LinearLayout>