<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:gravity="center"
        android:background="@color/blue_light">

        <com.ztp.app.Helper.MyTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MediumTextView"
            android:textColor="@color/white"/>
    </LinearLayout>

    <com.ztp.app.Helper.MyTextView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_40sdp"
        android:text="@string/camera"
        style="@style/RegularTextView"
        android:gravity="center"/>

    <View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:background="@color/background_3"/>

    <com.ztp.app.Helper.MyTextView
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        style="@style/RegularTextView"
        android:minHeight="@dimen/_40sdp"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/background_3"/>

    <com.ztp.app.Helper.MyTextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/RegularTextView"
        android:minHeight="@dimen/_40sdp"
        android:gravity="center"/>


</LinearLayout>