<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_150sdp"
        app:cardCornerRadius="@dimen/_20sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:gravity="center"
                android:orientation="horizontal">

                <com.ztp.app.Helper.MyHeadingTextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:text="@string/confirm_logout"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_15ssp"
                    android:background="@color/blue_light"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textAllCaps="true"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:gravity="center"
                android:orientation="vertical">

                <com.ztp.app.Helper.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                  android:gravity="center"
                    android:text="@string/are_you_sure_you_want_to_logout"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".25"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/yes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:background="@color/green">

                    <com.ztp.app.Helper.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white" />

                <LinearLayout
                    android:id="@+id/no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:background="@color/red">

                    <com.ztp.app.Helper.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>